body overflow 속성 변경 Issue: #1

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -7,6 +7,7 @@ html {
 }
 
 body {
+    overflow-y: overlay;
     font-family: $typographic-font-family;
     color: $typographic-base-font-color;
     line-height: $typographic-base-line-height;
